caputils-0.7.5
--------------

	* add: ability to set buffer size at initialization (use 0 for old
	       default)
	* change: the buffering behaviour has changed from only buffering when
	          empty to continious buffering.
	* change: `stream_t` is now a pointer and should be used in place of
	          `struct stream*`. Existing applications should change from
	          `stream_t*` to `stream_t`.
	* fix: pkg-config file libcap_utils-0.7 now includes all libraries.
	* add: stream_from_getopt and stream_print_info helpers.
	* fix: large-file support for 32bit arch.
	* fix: support for specifying pcap prefix to configure.
	* add: capmarker: utility for sending a special marker packets.
	* add: adding timeout to capdump which increases the responsiveness, e.g.
	       when piping to another application. Defaults to 1000ms.
	* fix: ethernet hproto was truncated to uint8_t.
	* fix: select call in fill_buffer would not propagate errors properly so
	       SIGINT would not be caught by user and thus stuck in infinite
	       loop.

caputils-0.7.4
--------------

	* change: logmsg using mutex to prevent interleaved output.
	* change: pcap2cap only supports capfiles. Use mp instead.
	* fix: issue in pcap2cap causing an inifinite loop over the same packet.
	* add: including pcap2cap and cap2pcap for conversion to and from pcap.
	* add: support for dropping groups and leading zeros in ethernet
	       addresses, e.g. 01::01 is read as 01:00:00:00:00:01
	* add: support for address prefix.
	* fix: sigreturn is not well defined, uses SIG_IGN instead.
	* fix: crash when file stream comment was null.

caputils-0.7.3
--------------

	* add: filter_*_set functions
	* add: stream_addr_str() to set a local filename easily.
	* add: stream_addr_type() to get type in host order
	* change: splitting filter structs so the packed and unpacked are
	          different (reordered, removed cruft etc)
	* change: logmsg writes tag centered.