@@ -233,7 +233,7 @@ int main(int argc, char **argv){
 		return 0; /* error already shown */
 	}
 
-	filter_print(&filter, stderr, 1);
+	filter_print(&filter, stderr, 0);
 
 	int op, option_index = -1;
 	while ( (op = getopt_long(argc, argv, "hcdi:p:t:", long_options, &option_index)) != -1 ){
