@@ -1,6 +1,7 @@
 caputils-0.7.5
 --------------
 
+	* add: --tp.port which matches either src or dst port.
 	* add: ability to set buffer size at initialization (use 0 for old
 	       default)
 	* change: the buffering behaviour has changed from only buffering when
